# prototype-nx-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  bazel-out  defs.bzl  jest.config.js  nx.json  package.json  tsconfig.json
@nrwl-bazel/: package.json
@nrwl-bazel/src/schematics/sync/: sync.d.ts  sync.js  sync.spec.js
@nrwl-bazel/src/schematics/sync/files/build-file/: BUILD.bazel__tmpl__
@nrwl-bazel/src/schematics/sync/files/root/: BUILD.bazel__tmpl__
@nrwl-bazel/src/schematics/utils/: testing.d.ts  testing.js
apps/angularapp/: BUILD.bazel
apps/angularapp-e2e/: BUILD.bazel
apps/angularapp/src/: index.html
apps/angularapp/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
apps/bazel-is-cool/: BUILD.bazel  jest.config.js
apps/bazel-is-cool-e2e/: cypress.json
apps/bazel-is-cool-e2e/src/integration/: app.spec.ts
apps/bazel-is-cool/src/: test-setup.ts
apps/bazel-is-cool/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
apps/cart/: BUILD.bazel
apps/cart-e2e/: BUILD.bazel
apps/products/: BUILD.bazel
apps/products-e2e/: BUILD.bazel
apps/reactapp/: BUILD.bazel  tsconfig.json
apps/reactapp-e2e/: BUILD.bazel
apps/reactapp/src/: polyfills.ts
apps/reactapp/src/app/: app.spec.tsx  app.tsx
libs/cart/cart-page/: BUILD.bazel
libs/parent/some-cool-lib/: BUILD.bazel  README.md  jest.config.js
libs/parent/some-cool-lib/src/: index.ts
libs/parent/some-cool-lib/src/lib/: pickles.component.html  pickles.component.spec.ts  pickles.component.ts  pickles.module.ts
libs/products/home-page/: BUILD.bazel
libs/products/product-detail-page/: BUILD.bazel
libs/shared-buildable-lib/: BUILD.bazel  ng-package.json  package.json  tslint.json
libs/shared-buildable-lib/src/lib/: shared-buildable-lib.module.ts
libs/shared-lib/: BUILD.bazel  README.md  jest.config.js
libs/shared-lib/src/: index.ts
libs/shared-lib/src/lib/: shared-lib.ts
libs/shared/assets/: BUILD.bazel
libs/shared/cart/state/: BUILD.bazel
libs/shared/e2e-utils/: BUILD.bazel
libs/shared/header/: BUILD.bazel
libs/shared/jsxify/: BUILD.bazel
libs/shared/product/data/: BUILD.bazel
libs/shared/product/state/: BUILD.bazel
libs/shared/product/types/: BUILD.bazel
libs/shared/product/ui/: BUILD.bazel
libs/shared/styles/: BUILD.bazel
patches/: @angular+compiler-cli+9.0.0-rc.0.patch  @ngtools+webpack+8.3.19.patch  jest-haste-map+24.8.1.patch
