exports_files(
    [
        "tsconfig.json",
        "tslint.json",
        "package.json",
        "angular.json",
        "nx.json",
        "jest.config.js",
        "node_modules/@angular/cli/bin/ng",
    ],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "node_modules",
    srcs = glob(
        [
            "node_modules/**/*.js",
            "node_modules/**/*.d.ts",
            "node_modules/**/*.json",
            "node_modules/**/*.md",
        ],
        exclude = [
            "**/test/**",
        ],
    ),
    visibility = ["//visibility:public"],
)
