# All rules in other repositories can use these targets
package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json",
        "tslint.json",
        "package.json",
        "angular.json",
        "nx.json",
        "jest.config.js",
    ],
)

filegroup(
    name = "node_modules",
    srcs = glob(
        [
            "node_modules/**/*",
        ],
    ),
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

# Wire up the `bin` entry `ng`
nodejs_binary(
    name = "nx",
    data = ["//:node_modules"],
    entry_point = "//:node_modules/@nrwl/cli/bin/nx.js",
    install_source_map_support = False,
)
