load("@npm//@nrwl/cli:index.bzl", "nx", "nx_test")

filegroup(
    name = "angularapp-e2e",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

nx_test(
    name = "e2e",
    args = [
        "e2e",
        "angularapp-e2e",
    ],
    data = [
        "tsconfig.e2e.json",
        "tsconfig.json",
        ":angularapp-e2e",
        "//:angular.json",
        "//:package.json",
        "//:tsconfig.json",
        "//apps/angularapp",
        "@npm//:node_modules",
    ],
)

# NOTE: should be nx_test when linker works for nodejs_test
nx(
    name = "lint",
    args = [
        "lint",
        "angularapp-e2e",
    ],
    data = [
        "tsconfig.e2e.json",
        "tsconfig.json",
        "tslint.json",
        ":angularapp-e2e",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//:node_modules",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)
