load("@npm//@angular/cli:index.bzl", "ng")

filegroup(
    name = "angularapp",
    srcs = glob(
        [
            "src/**",
        ],
        exclude = [
            "src/test-setup.ts",
            "**/*.spec.ts",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]) + [
        ":angularapp",
    ],
)

ng(
    name = "build",
    args = [
        "build",
        "angularapp",
        "--outputPath=$(@D)",
    ],
    data = [
        "browserslist",
        "tsconfig.app.json",
        "tsconfig.json",
        ":angularapp",
        "//:angular.json",
        "//:package.json",
        "//:tsconfig.json",
        "//libs/shared-buildable-lib",
        "//libs/shared-lib",
        "@npm//:node_modules",
    ],
    output_dir = True,
)

ng(
    name = "test",
    args = [
        "test",
        "angularapp",
    ],
    data = [
        "jest.config.js",
        "src/test-setup.ts",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":test-srcs",
        "//:angular.json",
        "//:jest.config.js",
        "//:package.json",
        "//:tsconfig.json",
        "@npm//:node_modules",
    ],
    output_dir = True,
)

# NOTE: should be ng_test when linker works for nodejs_test
ng(
    name = "lint",
    args = [
        "lint",
        "angularapp",
    ],
    data = [
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//:node_modules",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)
