load("//:nx.bzl", "nx", "nx_test")

filegroup(
    name = "angularapp",
    srcs = glob(
        [
            "src/**",
        ],
        exclude = [
            "src/test-setup.ts",
            "**/*.spec.ts",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]) + [
        ":angularapp",
    ],
)

nx(
    name = "build",
    args = [
        "build",
        "angularapp",
        "--outputPath=$(@D)",
    ],
    data = [
        "browserslist",
        "tsconfig.app.json",
        "tsconfig.json",
        ":angularapp",
        "//:angular.json",
        "//:package.json",
        "//:tsconfig.json",
        "//libs/shared-buildable-lib",
        "//libs/shared-lib",
    ],
    output_dir = True,
)

nx_test(
    name = "test",
    args = [
        "test",
        "angularapp",
    ],
    data = [
        "jest.config.js",
        "src/test-setup.ts",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":test-srcs",
        "//:angular.json",
        "//:jest.config.js",
        "//:package.json",
        "//:tsconfig.json",
        "//libs/shared-buildable-lib",
        "//libs/shared-lib",
    ],
)

nx_test(
    name = "lint",
    args = [
        "lint",
        "angularapp",
    ],
    data = [
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
    ],
)
