load("@npm//@angular/cli:index.bzl", "ng", "ng_test")

filegroup(
    name = "reactapp-e2e",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

ng_test(
    name = "e2e",
    args = [
        "e2e",
        "reactapp-e2e",
    ],
    data = [
        "tsconfig.e2e.json",
        "tsconfig.json",
        ":reactapp-e2e",
        "//:angular.json",
        "//:package.json",
        "//:tsconfig.json",
        "//apps/reactapp",
        "@npm//:node_modules",
    ],
)

# NOTE: should be ng_test when linker works for nodejs_test
ng(
    name = "lint",
    args = [
        "lint",
        "reactapp-e2e",
    ],
    data = [
        "tsconfig.e2e.json",
        "tsconfig.json",
        "tslint.json",
        ":reactapp-e2e",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//:node_modules",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)
