load("@npm//@nrwl/cli:index.bzl", "nx", "nx_test")

filegroup(
    name = "reactapp",
    srcs = glob(
        [
            "src/**",
        ],
        exclude = [
            "**/*.spec.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.tsx",
    ]) + [
        ":reactapp",
    ],
)

# NOTE: This command just spins forever. It appears that @nrwl/web:build has a bug.
nx(
    name = "build",
    args = [
        "build",
        "reactapp",
        "--outputPath=$@",
    ],
    data = [
        ".browserslistrc",
        "tsconfig.app.json",
        "tsconfig.json",
        ":reactapp",
        "//:angular.json",
        "//:package.json",
        "//:tsconfig.json",
        "//libs/shared-buildable-lib",
        "//libs/shared-lib",
        "@npm//@angular/cli",
        "@npm//@babel/preset-react",
        "@npm//@nrwl/react",
        "@npm//@nrwl/web",
        "@npm//@nrwl/workspace",
        "@npm//core-js",
        "@npm//document-register-element",
        "@npm//inquirer",
        "@npm//react",
        "@npm//react-dom",
        "@npm//regenerator-runtime",
    ],
    output_dir = True,
)

# NOTE: This won't work without upstream changes to rules_nodejs
nx_test(
    name = "test",
    args = [
        "test",
        "reactapp",
    ],
    data = [
        "jest.config.js",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":test-srcs",
        "//:angular.json",
        "//:jest.config.js",
        "//:package.json",
        "//:tsconfig.json",
        "@npm//:node_modules",
    ],
)

# NOTE: should be ng_test when linker works for nodejs_test
nx(
    name = "lint",
    args = [
        "lint",
        "reactapp",
    ],
    data = [
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//:node_modules",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)
