load("@npm//@angular/cli:index.bzl", "ng", "ng_test")

filegroup(
    name = "shared-buildable-lib",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

# NOTE: should be ng_test when linker works for nodejs_test
ng(
    name = "lint",
    args = [
        "lint",
        "shared-buildable-lib",
    ],
    data = [
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//:node_modules",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)

# NOTE: @angular-devkit/build-ng-packagr attempts to write outside bazel's sandbox so this command fails with
#
# NOTE: Results in ERROR: EPERM: operation not permitted, open 'execroot/prototype_nx_bazel/node_modules/tslib/package.json'
# An unhandled exception occurred: EPERM: operation not permitted, open 'execroot/prototype_nx_bazel/node_modules/tslib/package.json'
ng(
    name = "build",
    args = [
        "build",
        "shared-buildable-lib",
        # NOTE: Bazel should override the output path specified in angular.json but this builder doesn't have a flag for this.
        # "--outputPath=$@",
    ],
    data = [
        ":shared-buildable-lib",
        "ng-package.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        # NOTE: Using @npm//:node_modules fails here. Seems to not include all transitive dependencies
        "@npm//:node_modules",
    ],
    output_dir = True,
)
