load("@npm//@nrwl/cli:index.bzl", "nx")

filegroup(
    name = "shared-buildable-lib",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = [
            "**/*.spec.ts",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

nx(
    name = "build",
    args = [
        "build",
        "shared-buildable-lib",
        # NOTE: Bazel should override the output path specified in angular.json but this builder doesn't have a flag for this.
        # "--outputPath=$@",
    ],
    data = [
        "ng-package.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        ":shared-buildable-lib",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "@npm//:node_modules",
    ],
    output_dir = True,
)

# NOTE: should be ng_test when linker works for nodejs_test
nx(
    name = "lint",
    args = [
        "lint",
        "shared-buildable-lib",
    ],
    data = [
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
        "@npm//@angular-devkit/build-angular",
        "@npm//@angular-devkit/build-ng-packagr",
        "@npm//@angular/cli",
        "@npm//@angular/core",
        "@npm//@babel/preset-env",
        "@npm//ng-packagr",
        "@npm//tslib",
    ],
    # NOTE: remove when linker works for nodejs_test
    output_dir = True,
)
