load("//:nx.bzl", "nx", "nx_test")

filegroup(
    name = "shared-buildable-lib",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = [
            "**/*.spec.ts",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

nx(
    name = "build",
    args = [
        "build",
        "shared-buildable-lib",
        # NOTE: Bazel should override the output path specified in angular.json but this builder doesn't have a flag for this.
        # "--outputPath=$@",
    ],
    data = [
        "ng-package.json",
        "package.json",
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        ":shared-buildable-lib",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
    ],
    output_dir = True,
)

# NOTE: should be ng_test when linker works for nodejs_test
nx_test(
    name = "lint",
    args = [
        "lint",
        "shared-buildable-lib",
    ],
    data = [
        "tsconfig.json",
        "tsconfig.lib.json",
        "tslint.json",
        ":test-srcs",
        "//:angular.json",
        "//:nx.json",
        "//:package.json",
        "//:tsconfig.json",
        "//:tslint.json",
    ],
)
