filegroup(
    name = "shared-lib",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = [
            "**/*.spec.ts",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-srcs",
    srcs = glob([
        "**/*.spec.ts",
    ]),
)

# nx_test(
#     name = "test",
#     args = [
#         "test",
#         "shared-lib",
#     ],
#     data = [
#         "jest.config.js",
#         "tsconfig.json",
#         "tsconfig.spec.json",
#         ":shared-lib",
#         ":test-srcs",
#         "//:angular.json",
#         "//:jest.config.js",
#         "//:package.json",
#         "//:tsconfig.json",
#         "@npm//:node_modules",
#     ],
# )

# # NOTE: should be ng_test when linker works for nodejs_test
# nx(
#     name = "lint",
#     args = [
#         "lint",
#         "shared-lib",
#     ],
#     data = [
#         "tsconfig.json",
#         "tsconfig.lib.json",
#         "tsconfig.spec.json",
#         "tslint.json",
#         ":test-srcs",
#         "//:angular.json",
#         "//:nx.json",
#         "//:package.json",
#         "//:tsconfig.json",
#         "//:tslint.json",
#         "@npm//:node_modules",
#     ],
#     # NOTE: remove when linker works for nodejs_test
#     output_dir = True,
# )
